Add Framework LED Matrix
Signed-off-by: Daniel Schaefer <dhs@frame.work>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ all-features = true
 
 [features]
 adafruit_rgb_13x9 = []
+framework_ledmatrix = []
 embedded_graphics = ["embedded-graphics-core"]
-default = ["adafruit_rgb_13x9", "embedded_graphics"]
+default = ["embedded_graphics"]
