Move examples into subdirectory
This allows us to have different dependencies for different examples in
the futures.
And it makes it easier for new users to get started. They can just copy
the example folder.

Signed-off-by: Daniel Schaefer <dhs@frame.work>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,10 @@ jobs:
               - 'Cargo.lock'
               - '.github/workflows/**'
       - if: steps.changes.outputs.rust == 'true'
-        run: cargo build
+        run: |
+          cargo build --target=thumbv6m-none-eabi
+          cd examples/adafruit_rgb
+          cargo build --target=thumbv6m-none-eabi
 
   rustdoc:
     runs-on: ubuntu-latest
