gh-actions: Also run fmt and clippy
Signed-off-by: Daniel Schaefer <dhs@frame.work>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,4 +49,7 @@ jobs:
               - 'Cargo.lock'
               - '.github/workflows/**'
       - if: steps.changes.outputs.rust == 'true'
-        run: cargo doc
+        run: |
+          cargo doc
+          cargo fmt --all -- --check
+          cargo clippy -- --deny=warnings
